32-layout bug fix

--- a/src/Component/App.scss
+++ b/src/Component/App.scss
@@ -79,7 +79,7 @@ html,body{
 	@media (max-width: 780px) {
 		grid-template-areas: "header" "content" "footer" "social";
 		grid-template-columns: 100%;
-		// grid-template-rows: auto minmax(100vh,auto) auto auto;	
+		grid-template-rows: auto minmax(100vh,auto) auto auto;	
 	}
 
 
@@ -148,4 +148,8 @@ html,body{
 }
 .link{
 	@include link;
+}
+
+.copyright-notice{
+	color: #00000066;
 }
